# typocide

./: .gitignore  Makefile  README.md  dune-project  leveltypeml.opam  typeracer.txt  typocide.opam
.github/workflows/: main.yml  upload_binaries_to _release.yml  upload_binaries_to_release.yml
lib/: cli.ml  corpus.ml  corpus.mli  cursor.ml  cursor.mli  dim.ml  dim.mli  dune  import.ml  model.ml  model.mli  pos.ml  quote.ml  text.ml  text.mli
test/: dune
